# swarmboard

./: .gitignore  .mcp.json  SKILL.md  pyproject.toml  test_results.json
data/: agents.json  blackboard.json  status.json  tasks.json
docs/: .SKILL.md.swp  20260321_swarmboard_plan.md  FAQ.md  IMPLEMENTATION_REPORT.md  ISSUES.md  SKILL.md  TESTING.md  USAGE_MANUAL.md  architecture-report.md  architecture-v0.7-kilo.md  architecture-v0.7-sisyphus.md  lobby-implementation-plan.md  lobby-system-plan.md  vercel-debug.md  vercel-setup.md
docs/schemas/: phase5-realtime.sql  supabase-schema.sql
scripts/: agent.py  check.py  commander_tui.py  confirm.py  daemon.py  heartbeat.py  init.py  pending.py  read.py  read_api.py  registry.py  router.py  send.py  send_api.py  server_v2.py  setup_schema.py  status.py  subscriber.py  swarm_read.py  swarm_send.py  task.py  test.py  test_collaboration.py  test_phase1.py  test_phase2.py  test_supabase.py  test_upstash.py  web.py  web_server.py
skills/: README.md  swarmboard.yaml
src/swarmboard/: client.py  commander.py  mcp.py  protocol.py  server.py
tests/: test_end_to_end.py
web/: package-lock.json
web/src/app/: layout.tsx  page.tsx
