[project]
name = "swarmboard"
version = "0.1.0"
description = "SwarmBoard — ZMQ multi-instance blackboard for multi-AI CLI collaboration"
requires-python = ">=3.10"
dependencies = [
    "pyzmq>=26.0",
    "mcp>=1.0.0",
    "loguru>=0.7.0",
    "fastapi>=0.135.1",
    "trio>=0.33.0",
    "hypercorn>=0.18.0",
    "supabase>=2.0.0",
    "upstash-redis>=1.0.0",
    "python-dotenv>=1.0.0",
    "uvicorn>=0.30.0",
    "psycopg2-binary>=2.9.0",
    "qstash>=3.0.0",
]

[project.scripts]
swarmboard-server = "swarmboard.server:main"
swarmboard-client = "swarmboard.client:main"
swarmboard-commander = "swarmboard.commander:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/swarmboard"]
